now it supports arbitrary projectors

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -8,30 +8,21 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from variational_solver import Var_Solver"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7b936623-fe59-4716-97a4-adc460eb5bae",
-   "metadata": {},
-   "source": [
-    "Решаем задачу на поиск равновесных цен $q(p) = p$ где $p\\in\\mathbb{R}^{n}_{+}$ и $q:\\mathbb{R}^{n}_{+}\\rightarrow\\mathbb{R}^{n}_{+}$\n",
-    "\n",
-    "Эту задачу можно сформулировать как задачу вариационного неравенства на $\\mathbb{R}^{n}_{+}$ при $F(p) = p - q(p)$\n"
+    "from variational_solver import Var_Solver as Solver\n",
+    "from variational_solver import projector_to_Rn_plus as projector  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "33975774-088b-4978-af43-9cfce5ae8b89",
+   "execution_count": 2,
+   "id": "4b1cb320-b5d9-409d-adc7-e054bbfe7463",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3.16227765e+03 2.15443470e-01 7.03841761e+00] [-4.41619846e-10  6.02244162e-10  1.13571064e-15]\n"
+      "[3.16227765e+03 2.15443470e-01 7.03841761e+00] [-4.24163510e-10  5.98556018e-10  1.26190071e-15]\n"
      ]
     }
    ],
@@ -40,37 +31,20 @@
     "    n = p.shape[0]\n",
     "    q = np.array([np.power(A[k,:] @ np.power(p, -1 * R[k]) + np.power(10, -1 * R[k]), -1/R[k]) for k in range(n)])\n",
     "    return q\n",
-    "    \n",
+    "\n",
+    "n = 3\n",
     "A = np.array([[0.9, 0.0, 0.0],\n",
     "              [0.0, 0.9, 0.0],\n",
     "              [0.0, 0.0, 0.1]])\n",
-    "\n",
     "R = np.array([-0.4, 0.6, 0.3])\n",
-    "\n",
     "F = lambda p: p - CES(A,R,p)\n",
     "\n",
-    "s = Var_Solver(F = F, min_bounds = np.zeros(3), max_bounds = np.infty * np.ones(3))\n",
-    "s.set_value(100 * np.random.random(3))\n",
+    "s = Solver(F = F, n = n, projector = projector(n))\n",
+    "s.set_value(100 * np.random.random(n))\n",
     "s.solve(a = 1, M = 10000) #проблема - я не знаю как записать условие остановки\n",
     "solution = s.value\n",
     "print(s.value, F(solution)/s.value) # А должен быть 0"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8f081088-a5f3-45c7-99c9-5dfb42aadae1",
-   "metadata": {},
-   "source": [
-    "Как проверить, существет ли второе решение? Решить на $\\mathbb{R}^{n}_{+}$ Затем разбить на клетки, которые не содеражт это решение, а потом проверить, а буду"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ad7f6073-19b4-448b-8db7-931d44657d1b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
